<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Ubikod
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">UrbanTag</string>
    <string name="mapKey">06XxQRbdBHJ-2-yW4NCcviDPun_3h6BYoaCpT4w</string>
    <string name="menu_preferences">Préférences</string>
    <string name="menu_tags">Catégories</string>
    <string name="menu_search">Rechercher</string>
    <string name="parameters_explain">Pour améliorer le positionnement nous vous conseillons d\'activer le Wi-Fi et le GPS.</string>
    <string name="active_wifi">Activer géoloc Wi-Fi</string>
    <string name="active_wifi_summary">Active la géolocalisation Wi-Fi pour améliorer le positionnement</string>
    <string name="active_gps">Activer le GPS</string>
    <string name="active_gps_summary">Active le GPS pour améliorer le positionnement</string>
    <string name="preferences_localisation">Localisation</string>
    <string name="active_network">Activer géoloc réseau</string>
    <string name="active_network_summary">Active la géolocalisation réseau pour le positionnement</string>
    <string name="preferences_history">Historique</string>
    <string name="delete_history">Supprimer l\'historique</string>
    <string name="delete_history_summary">Supprime l\'historique des lieux visités</string>
    <string name="delete_history_confirm">Etes-vous sûr de vouloir supprimer l\'historique ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="activate_geoloc">Activer la géolocalisation</string>
    <string name="activate_geoloc_confirm">Vous devez activer la géolocalisation réseau pour utiliser cette application.</string>
    <string name="ok">Ok</string>
    <string name="advice">Conseil</string>
    <string name="advice_unable_wifi">Pour améliorer le positionnement géographique nous vous conseillons d\'activer la géolocalisation Wi-Fi.</string>
    <string name="i_agree">D\'accord</string>
    <string name="dont_want">Je ne veux pas</string>
    <string name="menu_select_place">Sélectionner un lieu</string>
    <string name="no_contents_for_place">Il n\'y a pas de contenu pour ce lieu</string>
    <string name="a_place">un lieu</string>
    <string name="place">Lieu</string>
    <string name="place_dashed">Lieu :</string>
    <string name="an_event">un évènement</string>
    <string name="search_a">Rechercher :</string>
    <string name="select_tags">Sélectionner des catégories</string>
    <string name="category_needed">Vous devez sélectionner au moins une catégorie.</string>
    <string name="events">Evénements</string>
    <string name="new_place">Nouveau lieu !</string>
    <string name="error_occured">Une erreur a eu lieu.</string>
    <string name="no_matching_place">Il n\'y a pas de lieu correspondant.</string>
    <string name="no_matching_content">Il n\'y a pas de contenu correspondant.</string>
    <string name="no_matching_event">Il n\'y a pas d\'évènement correspondant.</string>
    <string name="error_loading_content">Impossible de charger les informations.</string>
    <string name="loading_content">Chargement des informations...</string>
    <string name="select_your_tags">Sélectionnez les catégories qui vous intéressent.</string>
    <string name="description">Description</string>
</resources>
