<!--
  Copyright 2012 Ubikod
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

   <PreferenceCategory
            android:title="@string/preferences_localisation">
         <CheckBoxPreference
                android:key="active_wifi"
                android:title="@string/active_wifi"
                android:summary="@string/active_wifi_summary" />

        <CheckBoxPreference
                android:key="active_gps"
                android:title="@string/active_gps"
                android:summary="@string/active_gps_summary">
        </CheckBoxPreference>
        

    </PreferenceCategory>
    
   <PreferenceCategory
            android:title="@string/preferences_history">
     <Preference
                android:key="delete_history"
                android:title="@string/delete_history"
                android:summary="@string/delete_history_summary"/>

   </PreferenceCategory>
    
    
</PreferenceScreen>
